Added sprint 15 tasks